apps/helloworld-bff/deploy/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-bff
  namespace: app
  labels:
    app.kubernetes.io/name: helloworld-bff
    secforge.platform/component: helloworld-bff
spec:
  selector:
    app.kubernetes.io/name: helloworld-bff
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
